# Cpp_Build_Exercise

./: README.md
build_exercise_proj/: CMakeLists.txt
build_exercise_proj/libs/: CMakeLists.txt
build_exercise_proj/libs/tools_lib_proj/: CMakeLists.txt
build_exercise_proj/libs/tools_lib_proj/include/: tools.hpp
build_exercise_proj/libs/tools_lib_proj/src/: tools.cpp
build_exercise_proj/src/: main.cpp
build_exercise_proj/tools_lib_proj/: CMakeLists.txt  tools.cpp  tools.hpp
